--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-remote_theme: pages-themes/slate@v0.2.0 # this line adds the slate theme of Jekyll. You can replace "slate@v0.2.0" with your preferred theme.
-
+remote_theme: pages-themes/slate@v0.2.0 
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
-
-title: "RESUME OF Giriraj Parsewar" # Replace "[Your Name]" with your first and last name.
+- jekyll-remote-theme 
+title: "RESUME OF Giriraj Parsewar" 
